--- a/BlockLoader/PresentationLayer/MainWindowView.xaml
+++ b/BlockLoader/PresentationLayer/MainWindowView.xaml
@@ -11,6 +11,11 @@
         d:DataContext="{d:DesignInstance blockLoader:MainWindowViewModel}">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+      <Style TargetType="Button">
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="Margin" Value="10"/>
+        <Setter Property="Width" Value="150"/>
+      </Style>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -23,7 +28,6 @@
                VerticalAlignment="Center"
                Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"
                Content="{x:Static properties:Resources.Loading}"/>
-
       
         <DataGrid 
             Grid.Row="0"
@@ -48,7 +52,9 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Button Grid.Row="1" Content="{x:Static properties:Resources.LoadBlocks}" HorizontalAlignment="Center" Margin="10" Command="{Binding LoadBlocksCommand}"/>
-
+      <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" >
+        <Button Content="{x:Static properties:Resources.LoadBlocks}" Command="{Binding LoadBlocksCommand}"/>
+        <Button Content="{x:Static properties:Resources.CalculateReaches}" />
+      </StackPanel>
     </Grid>
 </Window>
