Loading respondents on button click

--- a/BlockLoader/PresentationLayer/MainWindowView.xaml
+++ b/BlockLoader/PresentationLayer/MainWindowView.xaml
@@ -54,7 +54,7 @@
 
       <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" >
         <Button Content="{x:Static properties:Resources.LoadBlocks}" Command="{Binding LoadBlocksCommand}"/>
-        <Button Content="{x:Static properties:Resources.CalculateReaches}" />
+        <Button Content="{x:Static properties:Resources.CalculateReaches}" Command="{Binding CalculateReachesCommand}" />
       </StackPanel>
     </Grid>
 </Window>
